# substrate-api-client

./: .gitignore  Cargo.toml  README.md
src/: api.rs  lib.rs  node_metadata.rs  utils.rs
src/extrinsic/: mod.rs  xt_primitives.rs
src/metadata/: mod.rs  v12.rs  v13.rs  v14.rs
src/rpc/: json_req.rs  mod.rs
src/rpc/ws_client/: client.rs  mod.rs
