[package]
name = "ankr-substrate-api-client"
version = "0.0.0"
authors = ["DI <convexman@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
jsonrpsee-ws-client = "0.15.0"
jsonrpsee-core = "0.15.1"
log = { version = "0.4.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
string-builder = "0.2.0"

# Substrate dependencies
codec = { package = 'parity-scale-codec', version = "3.2.1", default-features = false, features = ['derive'] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", package = "frame-support", branch = "master" }
parity-util-mem = { version = "0.11.0", default-features = false }
primitive-types = { version = "0.12.0", features = ["codec"] }
scale-info = "2.2.0"
metadata = { version = "15.0.0", default-features = false, git = "https://github.com/paritytech/frame-metadata.git", branch = "main", package = "frame-metadata", features = ["std", "v12", "v13", "v14"] }
balances = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "pallet-balances" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "frame-system" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"] }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", features = ["full_crypto"], version = "7.0.0" }
sp-rpc = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", version = "7.0.0"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-version" }
staking = { git = "https://github.com/paritytech/substrate.git", branch = "master", package = "pallet-staking" }
transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", package = "pallet-transaction-payment" }
